--- a/css/style.css
+++ b/css/style.css
@@ -231,7 +231,7 @@ div#bubble #loginTabs [data-selected=true] {
 }
 
 div#bubble .loginForm {
-	width: 466px;
+	width: 500px;
 	height: 172px;
 	margin: 0 auto;
 	display: block;
@@ -254,11 +254,22 @@ div#bubble .loginForm #conversationName {
 	width: 450px;
 	font-size: 2.8em;
 	margin: 0 auto 10px auto;
-	display: block;
+	display: inline-block;
 	border: 0;
 	outline: 0;
 	background: transparent;
 	border-bottom: 2px solid #0087AF;
+}
+
+div#bubble .loginForm #conversationNameStrength {
+	visibility: hidden;
+	display: inline-block;
+	width: 20px;
+	height: 20px;
+	background-size: 12px;
+	background-repeat: no-repeat;
+	background-position: center;
+	border-radius: 50%;
 }
 
 div#bubble .loginForm #nickname {
