--- a/css/style.css
+++ b/css/style.css
@@ -311,9 +311,9 @@ div#loginInfo {
 
 div#bubble div#info {
 	border: 1px solid #C0C0C0;
-	padding: 4px 10px;
+	padding: 4px 25px;
 	border-radius: 4px 0 4px 4px;
-	margin: 30px auto;
+	margin: auto;
 	width: 80%;
 	height: auto;
 	font-size: 1.1em;
